--- a/index.html
+++ b/index.html
@@ -168,6 +168,14 @@ erl -noshell -pa ebin -name client_node@127.0.0.1 -s client
 </section>
 
 <section class="slide">
+  <h2>Automated housekeeping</h2>
+  <ul>
+    <li>ticks</li>
+    <li>global</li>
+  </ul>
+</section>
+
+<section class="slide">
   <h2>Don't drink too much Kool-Aid</h2>
   <ul>
     <li>fully connected mesh (N^2 connections)</li>
