style without shadows

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="imakewebthings-deck.js-e42bd0c/extensions/scale/deck.scale.css">
 
 	<!-- Style theme. More available in /themes/style/ or create your own. -->
-	<link rel="stylesheet" href="imakewebthings-deck.js-e42bd0c/themes/style/web-2.0.css">
+	<link rel="stylesheet" href="imakewebthings-deck.js-e42bd0c/themes/style/swiss.css">
 	
 	<!-- Transition theme. More available in /themes/transition/ or create your own. -->
 	<link rel="stylesheet" href="imakewebthings-deck.js-e42bd0c/themes/transition/horizontal-slide.css">
